# EonPlay

./: .clang-format  .gitignore  BUILD_STATUS.md  CMakeLists.txt  Dockerfile  Doxyfile  README.md  annotated.html  classes.html  dir_000001_000008.html  dir_000003_000008.html  dir_000004_000008.html  dir_000006_000008.html  dir_000010_000008.html  dir_000012_000008.html  dir_000014_000008.html  dir_000016_000008.html  dir_000017_000008.html  dir_000019_000008.html  dir_000021_000008.html  dir_000022_000002.html  dir_000022_000005.html  dir_000022_000009.html  dir_000022_000020.html  dir_000023_000008.html  dir_000025_000008.html  dir_128a93aeeff33a8423f079f46929dbb3.html  dir_128a93aeeff33a8423f079f46929dbb3_dep.map  dir_128a93aeeff33a8423f079f46929dbb3_dep.md5  dir_49e56c817e5e54854c35e136979f97ca.html  dir_4b68c2fef3e151b6b93d5e93b14f1857.html  dir_4b68c2fef3e151b6b93d5e93b14f1857_dep.map  dir_4b68c2fef3e151b6b93d5e93b14f1857_dep.md5  dir_64796fc43eb57c22dde6795632e36e74.html  dir_64796fc43eb57c22dde6795632e36e74_dep.map  dir_64796fc43eb57c22dde6795632e36e74_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_8a6c31bbbfb30065ee9a683ead3fe21a.html  (+383 more)
.github/: dependabot.yml
.github/workflows/: README.md  build-installers.yml  ci.yml  dependencies.yml  docker.yml  docs.yml  nightly.yml  publish-executables.yml  release.yml  simple-exe-upload.yml
d0/d00/: MediaPlayerApplication_8h__dep__incl.map  MediaPlayerApplication_8h__dep__incl.md5  classEonPlay_1_1Data_1_1Playlist.html  classEonPlay_1_1Data_1_1Playlist_a00f9067e0da2e6ec10317b0d0ed66063_icgraph.map  classEonPlay_1_1Data_1_1Playlist_a00f9067e0da2e6ec10317b0d0ed66063_icgraph.md5  classEonPlay_1_1Data_1_1Playlist_a058c80ece8232c3793d8d06fd7b26d2a_cgraph.map  classEonPlay_1_1Data_1_1Playlist_a058c80ece8232c3793d8d06fd7b26d2a_cgraph.md5  classEonPlay_1_1Data_1_1Playlist_a058c80ece8232c3793d8d06fd7b26d2a_icgraph.map  classEonPlay_1_1Data_1_1Playlist_a058c80ece8232c3793d8d06fd7b26d2a_icgraph.md5  classEonPlay_1_1Data_1_1Playlist_a0a03a352e00a115517c1e21b5ce34295_icgraph.map  classEonPlay_1_1Data_1_1Playlist_a0a03a352e00a115517c1e21b5ce34295_icgraph.md5  classEonPlay_1_1Data_1_1Playlist_a0adda430ad9472b6d1b7d518a81577b3_cgraph.map  classEonPlay_1_1Data_1_1Playlist_a0adda430ad9472b6d1b7d518a81577b3_cgraph.md5  classEonPlay_1_1Data_1_1Playlist_a0c605b62c675b1de1f879983e40e6acb_cgraph.map  classEonPlay_1_1Data_1_1Playlist_a0c605b62c675b1de1f879983e40e6acb_cgraph.md5  classEonPlay_1_1Data_1_1Playlist_a0c7e440c7038ab4e7e743b4b0294e8dd_cgraph.map  classEonPlay_1_1Data_1_1Playlist_a0c7e440c7038ab4e7e743b4b0294e8dd_cgraph.md5  classEonPlay_1_1Data_1_1Playlist_a0dcef6a77d0706afa09021481dcd473b_cgraph.map  classEonPlay_1_1Data_1_1Playlist_a0dcef6a77d0706afa09021481dcd473b_cgraph.md5  classEonPlay_1_1Data_1_1Playlist_a0dcef6a77d0706afa09021481dcd473b_icgraph.map  classEonPlay_1_1Data_1_1Playlist_a0dcef6a77d0706afa09021481dcd473b_icgraph.md5  classEonPlay_1_1Data_1_1Playlist_a1740740e9bae79eeed815eb5c639720f_cgraph.map  classEonPlay_1_1Data_1_1Playlist_a1740740e9bae79eeed815eb5c639720f_cgraph.md5  classEonPlay_1_1Data_1_1Playlist_a1740740e9bae79eeed815eb5c639720f_icgraph.map  classEonPlay_1_1Data_1_1Playlist_a1740740e9bae79eeed815eb5c639720f_icgraph.md5  classEonPlay_1_1Data_1_1Playlist_a1741a93f8967ecbf24486ae8baac00dd_icgraph.map  classEonPlay_1_1Data_1_1Playlist_a1741a93f8967ecbf24486ae8baac00dd_icgraph.md5  classEonPlay_1_1Data_1_1Playlist_a1e0066ed7bee464f9bb646c18ad8713d_icgraph.map  classEonPlay_1_1Data_1_1Playlist_a1e0066ed7bee464f9bb646c18ad8713d_icgraph.md5  classEonPlay_1_1Data_1_1Playlist_a27a5870aa7756eaf5534e49f21887bad_cgraph.map  classEonPlay_1_1Data_1_1Playlist_a27a5870aa7756eaf5534e49f21887bad_cgraph.md5  classEonPlay_1_1Data_1_1Playlist_a298e729fa89f32e85374a767b22174d8_icgraph.map  classEonPlay_1_1Data_1_1Playlist_a298e729fa89f32e85374a767b22174d8_icgraph.md5  classEonPlay_1_1Data_1_1Playlist_a29de4f7fb19a70ded98dba331ce75db6_cgraph.map  classEonPlay_1_1Data_1_1Playlist_a29de4f7fb19a70ded98dba331ce75db6_cgraph.md5  classEonPlay_1_1Data_1_1Playlist_a2b74d3ac822324d572499f680b59dc09_icgraph.map  classEonPlay_1_1Data_1_1Playlist_a2b74d3ac822324d572499f680b59dc09_icgraph.md5  classEonPlay_1_1Data_1_1Playlist_a3dd8885ea106031c6fe20d618834cbad_icgraph.map  classEonPlay_1_1Data_1_1Playlist_a3dd8885ea106031c6fe20d618834cbad_icgraph.md5  classEonPlay_1_1Data_1_1Playlist_a3ec3853b1f913ad37d6f04e63ea2355b_icgraph.map  (+79 more)
d0/d02/: classWindowsPlatform-members.html
d0/d0e/: SettingsManager_8h__incl.map  SettingsManager_8h__incl.md5
d0/d18/: structInternetStreamingManager_1_1InternetStream__coll__graph.map  structInternetStreamingManager_1_1InternetStream__coll__graph.md5
d0/d19/: structInternetStreamingService_1_1PodcastEpisode-members.html
d0/d22/: classLicenseViewer__coll__graph.map  classPlaybackController.html  (+103 more)
docs/: AdvancedPlaybackFeatures.md  FileUrlSupport.md  HardwareAcceleration.md  PlaybackController.md  VLCBackend.md
examples/: advanced_playback_example.cpp  file_url_support_example.cpp  hardware_acceleration_example.cpp  playback_controller_example.cpp  vlc_backend_example.cpp
include/: .gitkeep  ComponentManager.h  EonPlayApplication.h  EventBus.h  IComponent.h  MediaPlayerApplication.h  SettingsManager.h  UserPreferences.h
plugins/: .gitkeep  CMakeLists.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  (+129 more)
src/: main.cpp
tests/: CMakeLists.txt  test_file_url_support.cpp  test_hardware_acceleration.cpp  test_playback_controller.cpp  test_playback_integration.cpp  test_vlc_backend.cpp  test_vlc_integration.cpp
(+3798 files in other folders)
